--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -472,6 +472,7 @@
   </svg>
 
 </div>
+<p>coucou</p>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
