--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -472,7 +472,7 @@
   </svg>
 
 </div>
-<p>coucou toi</p>
+<p>coucou toi!</p>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
 <!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
