--- a/hello-world/src/app/app.component.html
+++ b/hello-world/src/app/app.component.html
@@ -472,7 +472,7 @@
   </svg>
 
 </div>
-<p>coucou cabrito !</p>
+<p>coucou cabrito !!!</p>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
